# exarrow-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  init-firewall.sh
.github/workflows/: ci.yml
.serena/: project.yml
.spox/: .gitignore
benches/rust/: benchmark.rs
docs/: driver-manager.md  import-export.md  setup-and-connect.md  type-mapping.md
examples/: basic_usage.rs  exasol-docker.md  import_export.rs
specs/: mission.md
specs/_plans/change-chacha20-legacy-encryption-spec/: plan.md  tasks.md  verification-report.md
specs/_plans/change-chacha20-legacy-encryption-spec/connection-management/native-auth/: spec.md
specs/_plans/change-chacha20-legacy-encryption-spec/connection-management/transport-selection/: spec.md
specs/_plans/change-chacha20-legacy-encryption-spec/native-client/encryption/: spec.md
specs/_plans/fix-adbc-compliance-failures/: plan.md  tasks.md  verification-report.md
specs/_plans/fix-adbc-compliance-failures/adbc-driver/get-objects/: spec.md
specs/_plans/fix-adbc-compliance-failures/adbc-driver/get-parameter-schema/: spec.md
specs/_plans/fix-adbc-compliance-failures/adbc-driver/transactions/: spec.md
specs/_plans/fix-adbc-compliance-failures/prepared-statements/binding-and-execution/: spec.md
specs/_plans/fix-import-stream-concurrency/: plan.md  root-cause-analysis.md  tasks.md  verification-report.md
specs/_plans/fix-import-stream-concurrency/adbc-driver/bulk-ingestion/: spec.md
specs/_plans/fix-import-stream-concurrency/adbc-driver/get-objects/: spec.md
specs/_plans/fix-import-stream-concurrency/adbc-driver/get-parameter-schema/: spec.md
specs/_plans/fix-import-stream-concurrency/adbc-driver/get-table-schema/: spec.md
specs/_plans/fix-import-stream-concurrency/adbc-driver/transactions/: spec.md
specs/_plans/fix-import-stream-concurrency/import-export/csv-import/: spec.md
specs/_plans/fix-import-stream-concurrency/websocket-client/protocol/: spec.md
specs/adbc-driver/: spec.md
specs/adbc-driver/bulk-ingestion/: spec.md
specs/adbc-driver/driver-interface/: spec.md
specs/adbc-driver/get-objects/: spec.md
specs/adbc-driver/get-parameter-schema/: spec.md
specs/adbc-driver/get-table-schema/: spec.md
specs/adbc-driver/transactions/: spec.md
specs/arrow-conversion/: spec.md
specs/arrow-conversion/type-converters/: spec.md
specs/code-quality/: spec.md
specs/connection-management/: spec.md
specs/connection-management/auth-and-security/: spec.md
specs/connection-management/native-auth/: spec.md
specs/connection-management/session-and-lifecycle/: spec.md
specs/connection-management/transport-selection/: spec.md
specs/connection-management/version-capability/: spec.md
specs/documentation/: spec.md
specs/import-export/arrow-recordbatch/: spec.md
specs/import-export/csv-import/: spec.md
specs/import-export/http-transport/: spec.md
specs/import-export/parallel-import/: spec.md
specs/import-export/parquet-io/: spec.md
specs/integration-testing/: spec.md
specs/native-client/encryption/: spec.md
specs/native-client/protocol/: spec.md
specs/native-client/result-sets/: spec.md
specs/native-client/zero-copy-fetch/: spec.md
specs/prepared-statements/: spec.md
specs/prepared-statements/binding-and-execution/: spec.md
specs/query-execution/: spec.md
specs/query-execution/results-and-transactions/: spec.md
specs/type-mapping/: spec.md
specs/type-mapping/exasol-to-arrow/: spec.md
specs/websocket-client/: spec.md
specs/websocket-client/protocol/: spec.md
src/: adbc_ffi.rs  error.rs  lib.rs
src/adbc/: connection.rs  database.rs  driver.rs  mod.rs  statement.rs
src/arrow_conversion/: builders.rs  converter.rs  mod.rs
src/connection/: auth.rs  mod.rs  params.rs  session.rs  version.rs
src/export/: arrow.rs  parquet.rs
src/import/: arrow.rs  csv.rs  parallel.rs  parquet.rs
src/query/: import.rs  mod.rs  prepared.rs  results.rs  statement.rs
src/transport/: deserialize.rs  http_transport.rs  messages.rs  mod.rs  protocol.rs  websocket.rs
src/transport/native/: arrow_builder.rs  attributes.rs  constants.rs  encryption.rs  framing.rs  handshake.rs  mod.rs  result_parser.rs
src/types/: conversion.rs  mapping.rs  mod.rs  schema.rs
tests/: driver_manager_tests.rs  import_export_tests.rs  integration_tests.rs  native_protocol_tests.rs  native_transport_smoke_test.rs  websocket_integration_tests.rs
tests/common/: mod.rs
