[package]
name = "exarrow-rs"
version = "0.7.0"
edition = "2021"
license = "MIT"
authors = ["Exasol Labs <labs@exasol.com>"]
description = "ADBC-compatible driver for Exasol with Arrow data format support"
repository = "https://github.com/exasol-labs/exarrow-rs"
homepage = "https://github.com/exasol-labs/exarrow-rs"
documentation = "https://docs.rs/exarrow-rs"
readme = "README.md"
keywords = ["exasol", "adbc", "arrow", "database", "driver"]
categories = ["database"]

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
# Apache Arrow support (arrow re-exports arrow-array, arrow-schema, etc.)
arrow = "57.1.0"

# Async runtime
tokio = { version = "1.42", features = ["rt-multi-thread", "net", "io-util", "time", "sync", "macros", "fs"] }

# WebSocket client
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Native root certificates for rustls
rustls-native-certs = "0.8"

# Async utilities
futures-util = "0.3"
async-trait = "0.1"

# URL encoding/decoding
urlencoding = "2.1"

# Hex encoding for binary data
hex = "0.4"

# RSA encryption for Exasol authentication (aws-lc-rs replaces rsa crate to eliminate CVE-2023-49092)
aws-lc-rs = "1"
base64 = "0.22"

# ADBC core traits (optional, for FFI export)
adbc_core = { version = "0.22.0", optional = true }
adbc_ffi = { version = "0.22.0", optional = true }

# TLS certificate generation for secure import/export
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["aws-lc-rs"] }

# Parquet file support
parquet = { version = "57.1.0", features = ["async"] }

# Compression support for CSV import/export
flate2 = "1.1"
bzip2 = "0.5"

# SHA-256 fingerprint for TLS certificates
sha2 = "0.10"

# Date/time formatting for import/export
chrono = "0.4"

# Byte buffer utilities
bytes = "1.10"

# Benchmark dependencies (optional)
fake = { version = "3.1", features = ["derive", "chrono"], optional = true }
rand = { version = "0.8", optional = true }
indicatif = { version = "0.17", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
dotenvy = { version = "0.15", optional = true }

# Polars for DataFrame benchmarks (optional)
polars = { version = "0.46", features = ["lazy", "ipc_streaming", "dtype-decimal"], optional = true }

[dev-dependencies]
# Mocking for tests
mockall = "0.14.0"
# ADBC driver manager and core for integration testing
adbc_driver_manager = "0.22"
adbc_core = "0.22"
tempfile = "3.24.0"
# Environment variable loading for examples
dotenvy = "0.15"

[[bin]]
name = "generate_data"
path = "benches/rust/generate_data.rs"
required-features = ["benchmark"]

[[bin]]
name = "benchmark"
path = "benches/rust/benchmark.rs"
required-features = ["benchmark"]

[features]
default = []
ffi = ["dep:adbc_core", "dep:adbc_ffi"]
benchmark = ["dep:fake", "dep:rand", "dep:indicatif", "dep:clap", "dep:dotenvy", "dep:polars"]
